<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg_sports" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_main_logo"
            android:layout_width="159dp"
            android:layout_height="166dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="30dp"
            android:src="@drawable/lg_goplay" />

        <EditText
            android:id="@+id/edittext_main_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:hint="@string/hint.email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/edittext_main_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="1dp"
            android:hint="@string/hint.password"
            android:inputType="text|textPassword"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="1dp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_main_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button.login"
                android:layout_weight="1"
                android:textColor="@color/colorSecondaryDark"
                android:onClick="doLogin" />

            <Button
                android:id="@+id/button_main_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button.register"
                android:textColor="@color/colorSecondaryDark"
                android:onClick="goToRegister" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
